WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142350
Regression(
r173761
): ASSERTION FAILED: !is8Bit() in StringImpl::characters16()
https://bugs.webkit.org/show_bug.cgi?id=142350
Summary
Regression(r173761): ASSERTION FAILED: !is8Bit() in StringImpl::characters16()
Chris Dumez
Reported
2015-03-05 11:18:35 PST
Regression(
r173761
): ASSERTION FAILED: !is8Bit() in StringImpl::characters16(): ASSERTION FAILED: !is8Bit() /Volumes/Data/cdumez/WebKit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/text/StringImpl.h(420) : const UChar *WTF::StringImpl::characters16() const 1 0x10bf1a610 WTFCrash 2 0x10b583e0a WTF::StringImpl::characters16() const 3 0x10bf61038 WTF::equalInner(WTF::StringImpl&, unsigned int, WTF::StringImpl&, bool) 4 0x10bf60f12 WTF::StringImpl::startsWith(WTF::StringImpl&, unsigned int, bool) const 5 0x10be5eec9 WTF::String::startsWith(WTF::String&, unsigned int, bool) const 6 0x10be59dc3 JSC::stringProtoFuncStartsWith(JSC::ExecState*) In equalInner(), it is assumed that if stringImpl is 16-bit, then matchString is 16-bit too. However, this does not seem to be the case.
Attachments
Patch
(12.67 KB, patch)
2015-03-05 14:40 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.03 KB, patch)
2015-03-05 15:05 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.45 KB, patch)
2015-03-05 15:12 PST
,
Chris Dumez
benjamin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2015-03-05 14:40:33 PST
Created
attachment 248003
[details]
Patch
Michael Saboff
Comment 2
2015-03-05 14:47:14 PST
Comment on
attachment 248003
[details]
Patch r=me
Benjamin Poulain
Comment 3
2015-03-05 14:49:13 PST
Comment on
attachment 248003
[details]
Patch You should have a JSC test too.
Chris Dumez
Comment 4
2015-03-05 15:05:24 PST
Created
attachment 248005
[details]
Patch
Chris Dumez
Comment 5
2015-03-05 15:05:38 PST
(In reply to
comment #3
)
> Comment on
attachment 248003
[details]
> Patch > > You should have a JSC test too.
Done.
Benjamin Poulain
Comment 6
2015-03-05 15:08:48 PST
Comment on
attachment 248005
[details]
Patch You forgot to pass the index. You can keep those but you need moooooooarr
Chris Dumez
Comment 7
2015-03-05 15:12:04 PST
Created
attachment 248008
[details]
Patch
Benjamin Poulain
Comment 8
2015-03-05 15:35:18 PST
Committed
r181105
: <
http://trac.webkit.org/changeset/181105
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug