Source/WTF/wtf/text/StringImpl.cpp
@@ -1357,7 +1357,7 @@ ALWAYS_INLINE static bool equalInner(const StringImpl* stringImpl, unsigned star
     return equalIgnoringCase(stringImpl->characters16() + startOffset, reinterpret_cast<const LChar*>(matchString), matchLength);
 }
 
-ALWAYS_INLINE static bool equalInner(StringImpl& stringImpl, unsigned startOffset, StringImpl& matchString, bool caseSensitive)
+ALWAYS_INLINE static bool equalInner(const StringImpl& stringImpl, unsigned startOffset, const StringImpl& matchString)
 {
     if (startOffset > stringImpl.length())
         return false;
@@ -1366,14 +1366,14 @@ ALWAYS_INLINE static bool equalInner(StringImpl& stringImpl, unsigned startOffse
     if (matchString.length() + startOffset > stringImpl.length())
         return false;
 
-    if (caseSensitive) {
-        if (stringImpl.is8Bit())
+    if (stringImpl.is8Bit()) {
+        if (matchString.is8Bit())
             return equal(stringImpl.characters8() + startOffset, matchString.characters8(), matchString.length());
-        return equal(stringImpl.characters16() + startOffset, matchString.characters16(), matchString.length());
+        return equal(stringImpl.characters8() + startOffset, matchString.characters16(), matchString.length());
     }
-    if (stringImpl.is8Bit())
-        return equalIgnoringCase(stringImpl.characters8() + startOffset, matchString.characters8(), matchString.length());
-    return equalIgnoringCase(stringImpl.characters16() + startOffset, matchString.characters16(), matchString.length());
+    if (matchString.is8Bit())
+        return equal(stringImpl.characters16() + startOffset, matchString.characters8(), matchString.length());
+    return equal(stringImpl.characters16() + startOffset, matchString.characters16(), matchString.length());
 }
 
 bool StringImpl::startsWith(const StringImpl* str) const
@@ -1407,9 +1407,9 @@ bool StringImpl::startsWith(const char* matchString, unsigned matchLength, bool 
     return equalInner(this, 0, matchString, matchLength, caseSensitive);
 }
 
-bool StringImpl::startsWith(StringImpl& matchString, unsigned startOffset, bool caseSensitive) const
+bool StringImpl::hasInfixStartingAt(const StringImpl& matchString, unsigned startOffset) const
 {
-    return equalInner(const_cast<StringImpl&>(*this), startOffset, matchString, caseSensitive);
+    return equalInner(*this, startOffset, matchString);
 }
 
 bool StringImpl::endsWith(StringImpl* matchString, bool caseSensitive)
@@ -1436,11 +1436,11 @@ bool StringImpl::endsWith(const char* matchString, unsigned matchLength, bool ca
     return equalInner(this, startOffset, matchString, matchLength, caseSensitive);
 }
 
-bool StringImpl::endsWith(StringImpl& matchString, unsigned endOffset, bool caseSensitive) const
+bool StringImpl::hasInfixEndingAt(const StringImpl& matchString, unsigned endOffset) const
 {
     if (endOffset < matchString.length())
         return false;
-    return equalInner(const_cast<StringImpl&>(*this), endOffset - matchString.length(), matchString, caseSensitive);
+    return equalInner(*this, endOffset - matchString.length(), matchString);
 }
 
 Ref<StringImpl> StringImpl::replace(UChar oldC, UChar newC)
